[gd_scene load_steps=6 format=3 uid="uid://dh5j0qop5ew0s"]

[ext_resource type="Script" uid="uid://bqgvkyac8aw63" path="res://scripts/stats/StatsScreen.gd" id="1_eok5x"]
[ext_resource type="Texture2D" uid="uid://b1vq26aj7e5b1" path="res://sprites/ui/arrows/arrow_left.png" id="2_dlhjq"]
[ext_resource type="Texture2D" uid="uid://c21c2ehwnktdj" path="res://sprites/ui/arrows/arrow_left_disabled.png" id="3_eok5x"]
[ext_resource type="Texture2D" uid="uid://l4oggb0rnncm" path="res://sprites/ui/arrows/arrow_right.png" id="4_h1n6l"]
[ext_resource type="Texture2D" uid="uid://cxmjdxefbo6ui" path="res://sprites/ui/arrows/arrow_right_disabled.png" id="5_w8f1j"]

[node name="end_screen" type="VBoxContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -12.0
offset_right = 300.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_eok5x")

[node name="stats" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(600, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 20

[node name="player_list" type="VBoxContainer" parent="stats"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VSeparator" type="VSeparator" parent="stats"]
layout_mode = 2
size_flags_horizontal = 4

[node name="stat_list" type="VBoxContainer" parent="stats"]
layout_mode = 2
size_flags_horizontal = 3

[node name="player" type="HBoxContainer" parent="stats/stat_list"]
layout_mode = 2
size_flags_vertical = 6

[node name="left" type="TextureButton" parent="stats/stat_list/player"]
layout_mode = 2
size_flags_horizontal = 2
texture_normal = ExtResource("2_dlhjq")
texture_pressed = ExtResource("3_eok5x")
stretch_mode = 5

[node name="username" type="Label" parent="stats/stat_list/player"]
layout_mode = 2
size_flags_horizontal = 6
text = "username"

[node name="right" type="TextureButton" parent="stats/stat_list/player"]
layout_mode = 2
size_flags_horizontal = 10
texture_normal = ExtResource("4_h1n6l")
texture_pressed = ExtResource("5_w8f1j")
stretch_mode = 5

[node name="buttons" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 10

[node name="menu" type="Button" parent="buttons"]
layout_mode = 2
text = "Main Menu"

[node name="lobby" type="Button" parent="buttons"]
layout_mode = 2
text = "Return to Lobby"

[connection signal="pressed" from="stats/stat_list/player/left" to="stats" method="_on_left_pressed"]
[connection signal="pressed" from="stats/stat_list/player/right" to="stats" method="_on_right_pressed"]
[connection signal="pressed" from="buttons/menu" to="." method="_on_menu_pressed"]
[connection signal="pressed" from="buttons/lobby" to="." method="_on_lobby_pressed"]
